--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -26,15 +26,12 @@
   #+BEGIN_SRC emacs-lisp
   (setq ediff-split-window-function 'split-window-horizontally)
   #+END_SRC
-  Store the extra garbage emacs makes in =~/.cache=.
+  Disable backups and autosaves.
   #+BEGIN_SRC emacs-lisp
-  (setq backup-directory-alist
-        `((".*" . ,(concat user-emacs-directory ".cache/backups")))
-        auto-save-file-name-transforms
-        `((".*" ,(concat user-emacs-directory ".cache/backups") t))
-        auto-save-list-file-prefix
-        (concat user-emacs-directory ".cache/auto-save-list/.saves-"))
-
+  ;disable backup
+  (setq backup-inhibited t)
+  ;disable auto save
+  (setq auto-save-default nil)
   #+END_SRC
   Only scroll one line when near the bottom of the screen, instead of jumping the screen around.
   #+BEGIN_SRC emacs-lisp
@@ -43,159 +40,158 @@
   #+END_SRC
 * Package loading
   #+BEGIN_SRC emacs-lisp
-    (add-to-list 'load-path user-emacs-directory)
-    (add-to-list 'load-path (concat user-emacs-directory "config"))
-    (add-to-list 'load-path (concat user-emacs-directory "elisp"))
-    (require 'cl)
-    (defun require-package (package)
-      "Install given PACKAGE."
-      (unless (package-installed-p package)
-        (unless (assoc package package-archive-contents)
-          (package-refresh-contents))
-        (package-install package)))
-    (require-package 'use-package)
-    (require 'use-package)
-    (defmacro after (feature &rest body)
-    "After FEATURE is loaded, evaluate BODY."
-    (declare (indent defun))
-    `(eval-after-load ,feature
-        '(progn ,@body)))
-
-(defmacro bind (&rest commands)
-  "Convience macro which creates a lambda interactive command."
-  `(lambda ()
-     (interactive)
-     ,@commands))
-
-  (defun my-minibuffer-keyboard-quit ()
-    "Abort recursive edit.
-  In Delete Selection mode, if the mark is active, just deactivate it;
-  then it takes a second \\[keyboard-quit] to abort the minibuffer."
-    (interactive)
-    (if (and delete-selection-mode transient-mark-mode mark-active)
-        (setq deactivate-mark t)
-      (when (get-buffer "*Completions*") (delete-windows-on "*Completions*"))
-      (abort-recursive-edit)))
-
-  (defun set-transparency (alpha)
-    "Sets the transparency of the current frame."
-    (interactive "nAlpha: ")
-    (set-frame-parameter nil 'alpha alpha))
-
-  (defun my-google ()
-    "Google the selected region if any, display a query prompt otherwise."
-    (interactive)
-    (browse-url
-     (concat
-      "http://www.google.com/search?ie=utf-8&oe=utf-8&q="
-      (url-hexify-string (if mark-active
-                             (buffer-substring (region-beginning) (region-end))
-                           (read-string "Search Google: "))))))
-
-  (defun my-eval-and-replace ()
-    "Replace the preceding sexp with its value."
-    (interactive)
-    (backward-kill-sexp)
-    (condition-case nil
-        (prin1 (eval (read (current-kill 0)))
-               (current-buffer))
-      (error (message "Invalid expression")
-             (insert (current-kill 0)))))
-
-  (defun my-rename-current-buffer-file ()
-    "Renames current buffer and file it is visiting."
-    (interactive)
-    (let ((name (buffer-name))
-          (filename (buffer-file-name)))
-      (if (not (and filename (file-exists-p filename)))
-          (error "Buffer '%s' is not visiting a file!" name)
-        (let ((new-name (read-file-name "New name: " filename)))
-          (if (get-buffer new-name)
-              (error "A buffer named '%s' already exists!" new-name)
-            (rename-file filename new-name 1)
-            (rename-buffer new-name)
-            (set-visited-file-name new-name)
-            (set-buffer-modified-p nil)
-            (message "File '%s' successfully renamed to '%s'"
-                     name (file-name-nondirectory new-name)))))))
-
-  (defun my-delete-current-buffer-file ()
-    "Removes file connected to current buffer and kills buffer."
-    (interactive)
-    (let ((filename (buffer-file-name))
-          (buffer (current-buffer))
-          (name (buffer-name)))
-      (if (not (and filename (file-exists-p filename)))
-          (ido-kill-buffer)
-        (when (yes-or-no-p "Are you sure you want to remove this file? ")
-          (delete-file filename)
-          (kill-buffer buffer)
-          (message "File '%s' successfully removed" filename)))))
-
-  ;; make sure $PATH is set correctly
-  (require-package 'exec-path-from-shell)
-  (ignore-errors ;; windows
-    (exec-path-from-shell-initialize))
-
-  (defun my-terminal-config (&optional frame)
-    "Establish settings for the current terminal."
-    (if (not frame) ;; The initial call.
-        (xterm-mouse-mode 1)
-      ;; Otherwise called via after-make-frame-functions.
-      (if xterm-mouse-mode
-          ;; Re-initialise the mode in case of a new terminal.
-          (xterm-mouse-mode 1))))
-  ;; Evaluate both now (for non-daemon emacs) and upon frame creation
-  ;; (for new terminals via emacsclient).
-  (my-terminal-config)
-  (add-hook 'after-make-frame-functions 'my-terminal-config)
-  ;; Hide startup messages
-  (setq inhibit-splash-screen t
-        inhibit-startup-echo-area-message t
-        inhibit-startup-message t)
-
-  (setq custom-file (concat user-emacs-directory "custom.el"))
-  (when (file-exists-p custom-file)
-    (load custom-file))
-
-  ;; move cursor to the last position upon open
-  (use-package saveplace
-    :config
-    (progn
-      (setq save-place-file (concat user-emacs-directory ".cache/places"))
-      (setq-default save-place t)
+        (add-to-list 'load-path user-emacs-directory)
+        (add-to-list 'load-path (concat user-emacs-directory "config"))
+        (add-to-list 'load-path (concat user-emacs-directory "elisp"))
+        (require 'cl)
+        (defun require-package (package)
+          "Install given PACKAGE."
+          (unless (package-installed-p package)
+            (unless (assoc package package-archive-contents)
+              (package-refresh-contents))
+            (package-install package)))
+        (require-package 'use-package)
+        (require 'use-package)
+        (defmacro after (feature &rest body)
+        "After FEATURE is loaded, evaluate BODY."
+        (declare (indent defun))
+        `(eval-after-load ,feature
+            '(progn ,@body)))
+    
+    (defmacro bind (&rest commands)
+      "Convience macro which creates a lambda interactive command."
+      `(lambda ()
+         (interactive)
+         ,@commands))
+    
+      (defun my-minibuffer-keyboard-quit ()
+        "Abort recursive edit.
+      In Delete Selection mode, if the mark is active, just deactivate it;
+      then it takes a second \\[keyboard-quit] to abort the minibuffer."
+        (interactive)
+        (if (and delete-selection-mode transient-mark-mode mark-active)
+            (setq deactivate-mark t)
+          (when (get-buffer "*Completions*") (delete-windows-on "*Completions*"))
+          (abort-recursive-edit)))
+    
+      (defun set-transparency (alpha)
+        "Sets the transparency of the current frame."
+        (interactive "nAlpha: ")
+        (set-frame-parameter nil 'alpha alpha))
+    
+      (defun my-google ()
+        "Google the selected region if any, display a query prompt otherwise."
+        (interactive)
+        (browse-url
+         (concat
+          "http://www.google.com/search?ie=utf-8&oe=utf-8&q="
+          (url-hexify-string (if mark-active
+                                 (buffer-substring (region-beginning) (region-end))
+                               (read-string "Search Google: "))))))
+    
+      (defun my-eval-and-replace ()
+        "Replace the preceding sexp with its value."
+        (interactive)
+        (backward-kill-sexp)
+        (condition-case nil
+            (prin1 (eval (read (current-kill 0)))
+                   (current-buffer))
+          (error (message "Invalid expression")
+                 (insert (current-kill 0)))))
+    
+      (defun my-rename-current-buffer-file ()
+        "Renames current buffer and file it is visiting."
+        (interactive)
+        (let ((name (buffer-name))
+              (filename (buffer-file-name)))
+          (if (not (and filename (file-exists-p filename)))
+              (error "Buffer '%s' is not visiting a file!" name)
+            (let ((new-name (read-file-name "New name: " filename)))
+              (if (get-buffer new-name)
+                  (error "A buffer named '%s' already exists!" new-name)
+                (rename-file filename new-name 1)
+                (rename-buffer new-name)
+                (set-visited-file-name new-name)
+                (set-buffer-modified-p nil)
+                (message "File '%s' successfully renamed to '%s'"
+                         name (file-name-nondirectory new-name)))))))
+    
+      (defun my-delete-current-buffer-file ()
+        "Removes file connected to current buffer and kills buffer."
+        (interactive)
+        (let ((filename (buffer-file-name))
+              (buffer (current-buffer))
+              (name (buffer-name)))
+          (if (not (and filename (file-exists-p filename)))
+              (ido-kill-buffer)
+            (when (yes-or-no-p "Are you sure you want to remove this file? ")
+              (delete-file filename)
+              (kill-buffer buffer)
+              (message "File '%s' successfully removed" filename)))))
+    
+      ;; make sure $PATH is set correctly
+      (require-package 'exec-path-from-shell)
+      (ignore-errors ;; windows
+        (exec-path-from-shell-initialize))
+    
+      (defun my-terminal-config (&optional frame)
+        "Establish settings for the current terminal."
+        (if (not frame) ;; The initial call.
+            (xterm-mouse-mode 1)
+          ;; Otherwise called via after-make-frame-functions.
+          (if xterm-mouse-mode
+              ;; Re-initialise the mode in case of a new terminal.
+              (xterm-mouse-mode 1))))
+      ;; Evaluate both now (for non-daemon emacs) and upon frame creation
+      ;; (for new terminals via emacsclient).
+      (my-terminal-config)
+      (add-hook 'after-make-frame-functions 'my-terminal-config)
+      ;; Hide startup messages
+      (setq inhibit-splash-screen t
+            inhibit-startup-echo-area-message t
+            inhibit-startup-message t)
+    
+      (setq custom-file (concat user-emacs-directory "custom.el"))
+      (when (file-exists-p custom-file)
+        (load custom-file))
+  #+END_SRC
+  Move the cursor to the last position when I open a file.
+  #+BEGIN_SRC emacs-lisp
+      (use-package saveplace
+        :config
+        (progn
+          (setq save-place-file (concat user-emacs-directory ".cache/places"))
+          (setq-default save-place t)
+          )
+        )
+    
+  #+END_SRC
+  Save a history of minibuffer access.
+  #+BEGIN_SRC emacs-lisp
+      (use-package savehist
+        :config
+          (progn
+              (setq savehist-file (concat user-emacs-directory ".cache/savehist")
+                  savehist-additional-variables '(search ring regexp-search-ring)
+                  savehist-autosave-interval 60)
+              (savehist-mode +1)
+          )
       )
-    )
-
-  ;; minibuffer history
-  (use-package savehist
-    :config
-      (progn
-          (setq savehist-file (concat user-emacs-directory ".cache/savehist")
-              savehist-additional-variables '(search ring regexp-search-ring)
-              savehist-autosave-interval 60)
-          (savehist-mode +1)
-      )
-  )
-
-  ;; recent files
-  (use-package recentf
-    :config
-    (progn
-      (setq recentf-save-file (concat user-emacs-directory ".cache/recentf")
-            recentf-max-saved-items 1000
-            recentf-max-menu-items 500)
-      (recentf-mode +1)
-      ))
-
-  ;; erc
-  (setq erc-log-channels-directory (concat user-emacs-directory ".cache/erc/logs"))
-
-  ;; vc
-  (setq vc-make-backup-files t)
-
-  ;; narrowing
-  (put 'narrow-to-region 'disabled nil)
+    
+  #+END_SRC
+  Save a history of recent files.
+  #+BEGIN_SRC emacs-lisp
+      (use-package recentf
+        :config
+        (progn
+          (setq recentf-save-file (concat user-emacs-directory ".cache/recentf")
+                recentf-max-saved-items 1000
+                recentf-max-menu-items 500)
+          (recentf-mode +1)
+          ))
+    
+      ;; narrowing
+      (put 'narrow-to-region 'disabled nil)
   #+END_SRC
 * Dired
 ** Features
@@ -508,44 +504,44 @@
 ** Ido
    Interactive =do= mode.
    #+BEGIN_SRC emacs-lisp
-  (use-package ido
-    :config
-    (progn
-      (ido-mode 1)
-      (ido-everywhere 1)
-      (setq ido-enable-prefix nil)
-      (setq ido-use-virtual-buffers t)
-      (setq ido-enable-flex-matching t)
-      (setq ido-create-new-buffer 'always)
-      (setq ido-show-dot-for-dired t)
-      (setq ido-confirm-unique-completion nil)
-      (setq ido-enable-last-directory-history nil)
-      (setq ido-use-filename-at-point 'guess)
-      (setq ido-save-directory-list-file (concat user-emacs-directory ".cache/ido.last"))
-      (require-package 'ido-ubiquitous)
-      (use-package ido-ubiquitous
-        :config
-        (progn
-          (ido-ubiquitous-mode 1)
-          )
-        )
-      (require-package 'flx-ido)
-      (use-package flx-ido
-        :defines (ido-cur-item ido-default-item ido-cur-list)
-        :config
-        (progn
-          (flx-ido-mode 1)
-          )
-        )
-      (require-package 'ido-vertical-mode)
-      (use-package ido-vertical-mode
-        :config
-        (progn
-          (ido-vertical-mode)
-          )
-        )
-      )
-    )
+     (use-package ido
+       :config
+       (progn
+         (ido-mode 1)
+         (ido-everywhere 1)
+         (setq ido-enable-prefix nil)
+         (setq ido-use-virtual-buffers t)
+         (setq ido-enable-flex-matching t)
+         (setq ido-create-new-buffer 'always)
+         (setq ido-show-dot-for-dired t)
+         (setq ido-confirm-unique-completion nil)
+         (setq ido-enable-last-directory-history nil)
+         (setq ido-use-filename-at-point 'guess)
+         (setq ido-save-directory-list-file (concat user-emacs-directory ".cache/ido.last"))
+         (require-package 'ido-ubiquitous)
+         (use-package ido-ubiquitous
+           :config
+           (progn
+             (ido-ubiquitous-mode 1)
+             )
+           )
+         (require-package 'flx-ido)
+         (use-package flx-ido
+           :defines (ido-cur-item ido-default-item ido-cur-list)
+           :config
+           (progn
+             (flx-ido-mode 1)
+             )
+           )
+         (require-package 'ido-vertical-mode)
+         (use-package ido-vertical-mode
+           :config
+           (progn
+             (ido-vertical-mode)
+             )
+           )
+         )
+       )
    #+END_SRC
 *** Smex
     #+BEGIN_QUOTE
