--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -820,9 +820,8 @@
             (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
             (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
     
-          (after 'smex
-            (define-key evil-visual-state-map (kbd "SPC SPC") 'helm-M-x)
-            (define-key evil-normal-state-map (kbd "SPC SPC") 'helm-M-x))
+          (define-key evil-visual-state-map (kbd "SPC SPC") 'helm-M-x)
+          (define-key evil-normal-state-map (kbd "SPC SPC") 'helm-M-x)
     
           (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
           (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
